# serializer version: 1
# name: ProcessListExportsSiaeTest.test_list_for_siae_exports_view
  '''
  <div class="alert alert-info mt-3" id="besoin-dun-chiffre">
              <p class="mb-0">
                  <i aria-hidden="true" class="ri-information-line me-1"></i>
                  <b>Besoin d'un chiffre ?</b>
              </p>
              
                  <p class="mb-0">
                      Accédez aux <a href="/stats/siae/hiring" rel="noopener" target="_blank">données de recrutement de votre structure</a> (non nominatives) compilées, calculées et mises à jour quotidiennement.
                  </p>
              
          </div>
  '''
# ---
# name: ProcessListPrescriberTest.test_list_for_prescriber_pe_exports_view
  '''
  <div class="alert alert-info mt-3" id="besoin-dun-chiffre">
              <p class="mb-0">
                  <i aria-hidden="true" class="ri-information-line me-1"></i>
                  <b>Besoin d'un chiffre ?</b>
              </p>
              
                  <p class="mb-0">
                      Accédez aux données de votre agence (non nominatives) compilées, calculées et mises à jour quotidiennement :
                  </p>
                  <ul>
                      <li>
                          <a href="/stats/pe/state/main" rel="noopener" target="_blank">Voir les données de l'ensemble de l'état des candidatures orientées</a>
                      </li>
                      <li>
                          <a href="/stats/pe/conversion/main" rel="noopener" target="_blank">Voir les données du taux de transformation des candidatures</a>
                      </li>
                  </ul>
              
          </div>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[JOB SEEKER - no warnings]
  '''
  <section aria-labelledby="results">
                          <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
                              <h3 class="h4 mb-0" id="results">
                                  
                                      3 <strong>résultats</strong>
                                  
                              </h3>
                              <div aria-label="Actions sur les candidatures" class="flex-column flex-md-row btn-group btn-group-sm btn-group-action" role="group">
                                  
  
                                  
                              </div>
                          </div>
  
                          
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 30 mars 2023 par
  
          
              
                  <strong class="me-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line me-2"></i>Orienteur
              
          
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></span>
  </div>
  
      <h3 class="h3 mb-1">
          <a href="/company/42/card"><strong>Hit pit</strong></a>
      </h3>
  
      <hr/>
      <div class="row">
          <div class="col-12 col-lg-12 mb-3 mb-lg-0">
              
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                          <a aria-label="Voir ma candidature" class="btn btn-sm btn-outline-primary bg-white" href="/apply/11111111-1111-1111-1111-111111111111/jobseeker/details?back_url=/apply/job_seeker/list">Voir ma candidature</a>
                                      </div>
                                  </div>
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 18 mars 2023 par
  
          
              
                  <strong class="me-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line me-2"></i>Orienteur
              
          
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></span>
  </div>
  
      <h3 class="h3 mb-1">
          <a href="/company/42/card"><strong>Hit pit</strong></a>
      </h3>
  
      <hr/>
      <div class="row">
          <div class="col-12 col-lg-12 mb-3 mb-lg-0">
              
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                              <span class="d-inline-flex align-items-center text-warning fs-sm">
                                                  <i class="ri-time-line ri-lg me-1"></i>
                                                  En attente de réponse depuis 3 semaines.
                                              </span>
                                          
                                          <a aria-label="Voir ma candidature" class="btn btn-sm btn-outline-primary bg-white" href="/apply/22222222-2222-2222-2222-222222222222/jobseeker/details?back_url=/apply/job_seeker/list">Voir ma candidature</a>
                                      </div>
                                  </div>
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 16 février 2023 par
  
          
              
                  <strong class="me-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line me-2"></i>Orienteur
              
          
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></span>
  </div>
  
      <h3 class="h3 mb-1">
          <a href="/company/42/card"><strong>Hit pit</strong></a>
      </h3>
  
      <hr/>
      <div class="row">
          <div class="col-12 col-lg-12 mb-3 mb-lg-0">
              
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                              <span class="d-inline-flex align-items-center text-warning fs-sm">
                                                  <i class="ri-time-line ri-lg me-1"></i>
                                                  En attente de réponse depuis 8 semaines.
                                              </span>
                                          
                                          <a aria-label="Voir ma candidature" class="btn btn-sm btn-outline-primary bg-white" href="/apply/33333333-3333-3333-3333-333333333333/jobseeker/details?back_url=/apply/job_seeker/list">Voir ma candidature</a>
                                      </div>
                                  </div>
                              
  
                              
  
  
  
                          
                      </section>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[PRESCRIBER - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="results">
                          <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
                              <h3 class="h4 mb-0" id="results">
                                  
                                      3 <strong>résultats</strong>
                                  
                              </h3>
                              <div aria-label="Actions sur les candidatures" class="flex-column flex-md-row btn-group btn-group-sm btn-group-action" role="group">
                                  
      
          <a aria-label="Exporter la liste de candidatures" class="btn btn-ico btn-secondary mt-3 mt-md-0" href="/apply/prescriber/list/exports">
              <i aria-hidden="true" class="ri-download-2-fill"></i>
              <span>Exporter</span>
          </a>
      
  
  
                                  
                              </div>
                          </div>
  
                          
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 30 mars 2023 par
  
          
              <strong>Vous</strong>
          
          
              chez <a href="/company/42/card"><strong>Hit pit</strong></a>
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></span>
  </div>
  
      
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12">
              <h3 class="h3 mb-1">
                  J… H…
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                          <a aria-label="Gérer la candidature de J… H…" class="btn btn-sm btn-outline-primary bg-white" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-option="voir_candidature_prescripteur" href="/apply/11111111-1111-1111-1111-111111111111/prescriber/details?back_url=/apply/prescriber/list">Voir sa candidature</a>
                                      </div>
                                  </div>
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 18 mars 2023 par
  
          
              <strong>Vous</strong>
          
          
              chez <a href="/company/42/card"><strong>Hit pit</strong></a>
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></span>
  </div>
  
      
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12">
              <h3 class="h3 mb-1">
                  J… H…
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                              <span class="d-inline-flex align-items-center text-warning fs-sm">
                                                  <i class="ri-time-line ri-lg me-1"></i>
                                                  En attente de réponse depuis 3 semaines.
                                              </span>
                                          
                                          <a aria-label="Gérer la candidature de J… H…" class="btn btn-sm btn-outline-primary bg-white" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-option="voir_candidature_prescripteur" href="/apply/22222222-2222-2222-2222-222222222222/prescriber/details?back_url=/apply/prescriber/list">Voir sa candidature</a>
                                      </div>
                                  </div>
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 16 février 2023 par
  
          
              <strong>Vous</strong>
          
          
              chez <a href="/company/42/card"><strong>Hit pit</strong></a>
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></span>
  </div>
  
      
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12">
              <h3 class="h3 mb-1">
                  J… H…
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                              <span class="d-inline-flex align-items-center text-warning fs-sm">
                                                  <i class="ri-time-line ri-lg me-1"></i>
                                                  En attente de réponse depuis 8 semaines.
                                              </span>
                                          
                                          <a aria-label="Gérer la candidature de J… H…" class="btn btn-sm btn-outline-primary bg-white" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-option="voir_candidature_prescripteur" href="/apply/33333333-3333-3333-3333-333333333333/prescriber/details?back_url=/apply/prescriber/list">Voir sa candidature</a>
                                      </div>
                                  </div>
                              
  
                              
  
  
  
                          
                      </section>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[SIAE - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="results">
                          <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
                              <h3 class="h4 mb-0" id="results">
                                  
                                      3 <strong>résultats</strong>
                                  
                              </h3>
                              <div aria-label="Actions sur les candidatures" class="flex-column flex-md-row btn-group btn-group-sm btn-group-action" role="group">
                                  
      
          <a aria-label="Exporter la liste de candidatures" class="btn btn-ico btn-secondary mt-3 mt-md-0" href="/apply/siae/list/exports">
              <i aria-hidden="true" class="ri-download-2-fill"></i>
              <span>Exporter</span>
          </a>
      
  
  
                                  
                              </div>
                          </div>
  
                          
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 30 mars 2023 par
  
          
              
                  <strong class="me-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line me-2"></i>Orienteur
              
          
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></span>
  </div>
  
      
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12">
              <h3 class="h3 mb-1">
                  Jacques HENRY
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                          <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-sm btn-outline-primary bg-white" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-option="voir_candidature_employeur" href="/apply/11111111-1111-1111-1111-111111111111/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                                      </div>
                                  </div>
  
                                  
                                      
  
  <div class="card my-3 my-md-4 px-4 alert-dismissible-once d-none container rounded border-important bg-important-lightest" id="rdvi-promo">
      <div class="row">
          <div class="d-none d-md-block col-md-auto align-self-center">
              <img alt="" class="m-auto" height="90" loading="lazy" src="/static/img/logo_rdv_insertion.svg"/>
          </div>
          <div class="col-12 col-md p-0">
              <div class="card-header pt-4">
                  <span class="badge rounded-pill bg-important badge-xs">Nouveau service</span>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="alert" data-bs-target="#rdvi-promo" type="button">
                  </button>
              </div>
              <div class="card-body pb-4">
                  <h4>RDV-Insertion simplifie les rendez-vous avec vos candidats</h4>
                  <p>
                      Besoin d'un outil de prise de RDV par mail et/ou SMS avec gestion des rappels pour
                      augmenter le taux de présence de vos candidats aux entretiens individuels et
                      aux informations collectives ?
                  </p>
                  <a aria-label="Découvrir le service RDV-Insertion dans un nouvel onglet" class="btn btn-ico btn-link p-0" href="https://tally.so/r/mK5aPk" rel="noopener" target="_blank">
                      <span>Je découvre</span>
                      <i class="ri-external-link-line ri-lg"></i>
                  </a>
              </div>
          </div>
      </div>
  </div>
  
                                  
  
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 18 mars 2023 par
  
          
              
                  <strong class="me-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line me-2"></i>Orienteur
              
          
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></span>
  </div>
  
      
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12">
              <h3 class="h3 mb-1">
                  Jacques HENRY
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                              <span class="d-inline-flex align-items-center text-warning fs-sm">
                                                  <i class="ri-time-line ri-lg me-1"></i>
                                                  En attente de réponse depuis 3 semaines.
                                              </span>
                                          
                                          <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-sm btn-outline-primary bg-white" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-option="voir_candidature_employeur" href="/apply/22222222-2222-2222-2222-222222222222/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                                      </div>
                                  </div>
  
                                  
  
                              
                                  <div class="c-card card my-3 my-md-4 has-links-inside">
                                      
  
  <div class="card-body">
      
  <div class="fs-sm d-flex flex-column flex-md-row align-items-center mb-3">
      <span class="text-secondary order-2 order-md-1 me-auto">
          Émise le 16 février 2023 par
  
          
              
                  <strong class="me-2">Max THROUGHPUT</strong>
              
              
                  <i aria-hidden="true" class="ri-group-line me-2"></i>Orienteur
              
          
          
  
      </span>
      
      <span class="order-1 order-md-2 ms-auto"><span class="badge badge-sm rounded-pill text-wrap mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></span>
  </div>
  
      
      <div>
          
              <i class="ri-briefcase-line ri-xl me-1"></i><span class="font-weight-bold me-1 me-md-2">Candidature spontanée</span>
          
      </div>
  
  
  
      <hr/>
      <div class="row">
          <div class="col-12">
              <h3 class="h3 mb-1">
                  Jacques HENRY
              </h3>
              
  
              
                  
                      
                          
                              <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                  <i aria-hidden="true" class="ri-check-line"></i>
                                  Éligible à l’IAE
                              </span>
                          
                      
  
                  
              
          </div>
          
      </div>
  
  </div>
  
                                      <div class="card-footer text-end bg-light">
                                          
                                              <span class="d-inline-flex align-items-center text-warning fs-sm">
                                                  <i class="ri-time-line ri-lg me-1"></i>
                                                  En attente de réponse depuis 8 semaines.
                                              </span>
                                          
                                          <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-sm btn-outline-primary bg-white" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-option="voir_candidature_employeur" href="/apply/33333333-3333-3333-3333-333333333333/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                                      </div>
                                  </div>
  
                                  
  
                              
  
                              
  
  
  
                          
                      </section>
  '''
# ---
